Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54683

QtQuickCompiler generates invalid namespaces for qrc prefixes with spaces, preventing compilation

    XMLWordPrintable

Details

    • bbcedad58bd0baa88391b65d7801a7951d9c7c34 (5.6.4) e09a02fac0d1ecbffeebcb2012ecc659c8986a4e (5.11.0)

    Description

      When building a project with qtquickcompiler enabled, if the QRC prefix contains spaces, the generated cpp file contains invalid namespaces and will not compile. Removing qtquickcompiler from project also removes this problem.

      Steps to reproduce:

      • Run attached sample
      • Build the sample
      • EXPECTED: Sample builds
      • ACTUAL: Sample does not build due to invalid namespace

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            erikv Erik Verbruggen
            jussi_witick Jussi Witick
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes