Fix CONFIG+=qtquickcompiler with paths that contain spaces

Map spaces to underscores as well.

Task-number: QTBUG-54683
Change-Id: Id73c086a2845111623df631c06733ba2b42249e0
Reviewed-by: Andy Shaw <andy.shaw@qt.io>